--- a/27-08/src/pages/profile.html
+++ b/27-08/src/pages/profile.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/index.css">
 </head>
+
 <body>
     <form id="formCadastro">
         <label for="nome">Nome:</label>
@@ -21,5 +23,10 @@
         <button type="submit">Atualizar</button>
         <button type="submit">Deletar</button>
     </form>
+    <p id="mensagem"></p>
+
+    <script src="../js/atualizar.js"></script>
+
 </body>
+
 </html>
