feat: deletar e atualizar usuarios

--- a/27-08/src/pages/profile.html
+++ b/27-08/src/pages/profile.html
@@ -20,12 +20,14 @@
         <label for="senha">Senha:</label>
         <input type="password" id="senha" name="senha" required>
 
-        <button type="submit">Atualizar</button>
-        <button type="submit">Deletar</button>
+        <button type="submit" id="update">Atualizar</button>
+        <button type="submit" id="delete">Deletar</button>
     </form>
     <p id="mensagem"></p>
 
+    <script src="../js/profile.js"></script>
     <script src="../js/atualizar.js"></script>
+    <script src="../js/deletar.js"></script>
 
 </body>
 
